<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
  <data>
    <import type="android.view.View"/>
    <variable
        name="viewModel"
        type="com.truethat.android.viewmodel.StudioViewModel"
        />
  </data>
  <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".view.fragment.StudioFragment"
      >

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cameraFragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_camera"
        />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/previewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{viewModel.mScenePreviewVisibility? View.VISIBLE : View.GONE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
      <android.support.constraint.ConstraintLayout
          android:id="@+id/mediaContainer"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          />
      <android.support.constraint.ConstraintLayout
          android:id="@+id/flowLayout"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.05"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          >
        <ImageButton
            android:id="@+id/parentMedia"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/image_content_description"
            android:onClick="@{() -> viewModel.displayParentMedia()}"
            android:visibility="@{viewModel.mPreviousMediaVisibility? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/ic_media_previous"
            />
      </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>

    <ImageButton
        android:id="@+id/switchCameraButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="16dp"
        android:background="@null"
        android:contentDescription="@string/image_content_description"
        android:scaleType="fitCenter"
        android:visibility="@{viewModel.mSwitchCameraButtonVisibility ? View.VISIBLE : View.GONE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/switch_camera"
        />

    <ImageButton
        android:id="@+id/cancelButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:background="@null"
        android:contentDescription="@string/image_content_description"
        android:onClick="@{() -> viewModel.onCancel()}"
        android:scaleType="fitCenter"
        android:visibility="@{viewModel.mCancelButtonVisibility ? View.VISIBLE : View.GONE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_delete"
        tools:visibility="visible"
        />

    <ImageButton
        android:id="@+id/sendButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:contentDescription="@string/image_content_description"
        android:onClick="@{() -> viewModel.onSent()}"
        android:scaleType="fitCenter"
        android:visibility="@{viewModel.mSendButtonVisibility ? View.VISIBLE : View.GONE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/send"
        tools:visibility="visible"
        />

    <ImageView
        android:id="@+id/loadingImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/image_content_description"
        android:scaleType="centerInside"
        android:visibility="@{viewModel.mLoadingImageVisibility ? View.VISIBLE : View.GONE}"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/anim_loading"
        />
  </android.support.constraint.ConstraintLayout>
</layout>
