...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.VideoFragment"
    >

  <TextureView
      android:id="@+id/videoTextureView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
...
