...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.PhotoFragment"
    >

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:contentDescription="@string/image_content_description"
      android:scaleType="centerCrop"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
...
